# Marketingbeast

./: .env.example  .gitignore  DEMO.md  DEPLOYMENT.md  GO_LIVE.md  META_SETUP.md  Makefile  README.md  docker-compose.yml  netlify.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/api/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  render.yaml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py  0002_content.py  0003_group_finder.py  0004_audit.py  0005_content_engine.py  0006_onboarding.py  0007_analytics.py  0008_inbox.py  0009_ads.py  0010_media.py  0011_agency.py  0012_billing.py  0013_webhook_events.py  0014_group_url.py
apps/api/app/: __init__.py  main.py
apps/api/app/api/: deps.py
apps/api/app/core/: config.py  logging.py  security.py
apps/api/tests/: conftest.py  test_ads.py  test_ads_unit.py  test_agency.py  test_analytics.py  test_audit.py  test_audit_unit.py  test_auth_smoke.py  test_billing.py  test_billing_webhook.py  test_config.py  test_content_draft.py  test_content_engine_unit.py  test_content_gen.py  test_group_discovery.py  test_group_finder.py  test_groups.py  test_health.py  test_image_generation.py  test_inbox.py  test_inbox_unit.py  test_media.py  test_media_credits_race.py  test_meta_live_helpers.py  test_meta_live_oauth_url.py  test_meta_live_publish.py  test_meta_mock.py  test_meta_oauth.py  test_onboarding.py  test_org_provision.py  test_org_provision_race.py  test_prod_config.py  test_publishing.py  test_publishing_race.py  test_reels.py  test_verticals.py  test_website_ssrf.py
(+152 files in other folders)
